Hiding overflow bug

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -59,6 +59,7 @@ body {
     padding: 0;
     cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='40' height='48' viewport='0 0 100 100' style='fill:black;font-size:24px;'><text y='50%'>📞</text></svg>"), auto;
     font-size: 100%;
+    overflow-y: hidden;
 }
 
 body {
